Bug 146487 - FILEOPEN PPTX: empty chart title shows as text "chart title" in Impress (while not in 365)
Summary: FILEOPEN PPTX: empty chart title shows as text "chart title" in Impress (whil...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2021-12-30 15:44 UTC by Gerald Pfeifer
Modified: 2024-01-22 11:13 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide in PPTX format (33.10 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-12-30 15:44 UTC, Gerald Pfeifer
Details
Visual comparison LibreOffice 7.4 vs Office 365 (305.77 KB, image/png)
2021-12-30 15:50 UTC, Gerald Pfeifer
Details
Simple reproducer (12.84 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-17 10:11 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the example file in Excel 2016 and Calc (115.80 KB, image/png)
2024-01-17 10:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2021-12-30 15:44:57 UTC
Created attachment 177210 [details]
Sample slide in PPTX format

How to reproduce: Open the sample slide in Impress and 365 and observe
how the text "char title" appears in the chart when opening in Impress
(only).
Comment 1 Gerald Pfeifer 2021-12-30 15:48:42 UTC
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 9e8c1da64fa8a520730ce0aea0f7199cd75c892f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

...and does not appear to be a regression, since already present in

Version: 6.4.8.0.0+
Build ID: 99b065ec31d032fc08ab14f66430dac4fef904a5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-4, Time: 2020-10-08_08:57:08
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

and

Version: 7.0.7.0.0+
Build ID: 54e9dd41dc9dd45af12c9346199f601ea4a5994d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2021-05-07_08:22:18
Calc: threaded
Comment 2 Gerald Pfeifer 2021-12-30 15:50:56 UTC
Created attachment 177211 [details]
Visual comparison LibreOffice 7.4 vs Office 365
Comment 3 m_a_riosv 2021-12-30 17:15:25 UTC
Opening in 365 and editing the chart, 'Add Chart Element' - 'Chart Title' - 'None' and saving. Then it's not showed with Impress.
At opening in 365 title is configured 'Above Chart' even it seems empty, maybe this is what makes Impress add the default value.
Comment 4 Gabor Kelemen (Collabora) 2022-01-20 23:23:43 UTC
Confirming in current-ish master.
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3b48e20b0101584a5e7ef48ba82238e735f0772b
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Already looks like this in:
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 5 Samuel Mehrbrodt 2023-08-18 08:47:50 UTC
WIP Patch: https://gerrit.libreoffice.org/c/core/+/155681
Comment 6 Gabor Kelemen (Collabora) 2024-01-17 10:11:44 UTC
Created attachment 192010 [details]
Simple reproducer

This example file shows how the file was created: create a simple Excel chart, then remove the data series name from the sheets B1 cell.

This results in the automatic title being used, but being empty.
In Word the automatic title is not coming from a backing spreadsheet, but it's a fixed "Chart Title" string. LO emulates this behavior in all of Writer/Calc/Impress, and uses the fixed string in this "empty automatic title" case as well, however this is incorrect when an Excel sheet is being used as data source.
Comment 7 Gabor Kelemen (Collabora) 2024-01-17 10:14:59 UTC
Created attachment 192011 [details]
Screenshot of the example file in Excel 2016 and Calc
Comment 8 Commit Notification 2024-01-18 14:33:27 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/135ce256ce9e879663d828ec6e699de521fad867

tdf#146487 Don't show generic diagram title when there is an empty title given

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2024-01-18 20:06:32 UTC
Samuel, thanks for fixing this. And Gerald for reporting.

Good in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4d0f2d5ec9f7f988a1493916ae35bac1986c95a8
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in (for comparison reason)
Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 10 Gerald Pfeifer 2024-01-21 15:22:35 UTC
Great, thank you Samuel and Gabor, and Bogdan vor the verification.

Samuel, are you planning to also push this into 24.02?
Comment 11 Samuel Mehrbrodt 2024-01-22 06:47:53 UTC
(In reply to Gerald Pfeifer from comment #10)

> Samuel, are you planning to also push this into 24.02?

Yes, backport is pending: https://gerrit.libreoffice.org/c/core/+/162270
Comment 12 Commit Notification 2024-01-22 07:29:13 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/13be76e4d58db7ff892dff900e7734ac424bd8dd

tdf#146487 Don't show generic diagram title when there is an empty title given

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Gerald Pfeifer 2024-01-22 11:13:15 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #11)
> Yes, backport is pending: https://gerrit.libreoffice.org/c/core/+/162270

Great - thank you, Samuel!