oox/inc/drawingml/chart/plotareaconverter.hxx
@@ -74,6 +74,8 @@ public:
 
     /** Returns the automatic chart title if the chart contains only one series. */
     const OUString&     getAutomaticTitle() const { return maAutoTitle; }
+    /** Returns true, if the chart contains only one series and have title textbox (even empty). */
+    bool                isSingleSeriesTitle() const { return mbSingleSeriesTitle; }
     /** Returns true, if chart type supports wall and floor format in 3D mode. */
     bool                isWall3dChart() const { return mbWall3dChart; }
 
@@ -82,6 +84,7 @@ private:
     bool                mb3dChart;
     bool                mbWall3dChart;
     bool                mbPieChart;
+    bool                mbSingleSeriesTitle;;
 };
 
 
